--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <datalist id="villes"></datalist>
 
     <div id="mapid"></div>
+    <!-- <div id="carteid"></div> -->
     
 
     <script type="text/javascript" src="app.js"></script>
